Adding more touches

--- a/MelbDjango/cluedo/slides/0020_title.html
+++ b/MelbDjango/cluedo/slides/0020_title.html
@@ -9,24 +9,26 @@
 </div>
 <aside class="notes">
   <p>
-    Hello everyone, thank you all for having me this evening.
+    Hello everyone, thank you all for having me this evening, especially while
+    I'm dressed as Cololnel Mustard. There is really something about holding a pipe
+    while delivering a talk, you must try it.
   </p>
   <p>
     This talk is about two things very dear to me: excessively
     worrying about software performance, and the classic 1940s murder
     mystery boardgame, Cluedo. At Uptick we found that one of our
-    products had developed a severe performance issue for one of its
-    endpoints. I ended up digging into the supporting Django libraries
-    we use and found some pretty interesting/alarming results. So I'll
-    be talking a bit about our products, the libraries we use, and the
-    tool leveraged to dig into the performance issue.
+    products had developed a severe performance issue. After some
+    digging around in the supporting Django libraries we use, I found some
+    pretty interesting/alarming results. So I'll be talking a bit
+    about our products, the libraries we use, and the tool leveraged
+    to dig into the performance issue.
   </p>
   <p>
-    The marriage of Cluedo with this talk comes primarily in the form
-    of a little game we'll all play about half way in. I'll be asking
-    you to have a guess about what you think the cause of our
-    performance issue was, and the closest guess will be taking away
-    this copy of Cluedo provided by CommonCode. So thank you very much
-    to CommonCode.
+    The marriage of Cluedo with this talk, in addition to my clothing,
+    comes in the form of a little game we'll all play about half way
+    in. I'll be asking you to have a guess about what you think the
+    cause of our performance issue was, and we'll be giving away a
+    prize to the closest guess. That prize is this here copy of
+    Cluedo, provided by CommonCode, so thanks to CommonCode!
   </p>
 </aside>
