--- a/MelbDjango/cluedo/slides/0040_cluedo.html
+++ b/MelbDjango/cluedo/slides/0040_cluedo.html
@@ -50,6 +50,10 @@
       Mustard, who, of course, is the namesake of my persona this
       evening.
     </p>
+    <p>
+      Note that each of these characters involves a color. This is to
+      match the player tokens that are moved around the playing board.
+    </p>
   </aside>
 </section>
 
@@ -74,7 +78,8 @@
   <aside class="notes">
     <p>
       The second deck is that of the potential locations of the
-      killing, each corresponding to a room on the playing board.
+      murder. Each room corresponds to a location on the playing board. Players are able
+      to move their tokens from room to room during the game.
     </p>
   </aside>
 </section>
@@ -147,7 +152,7 @@
       When ready, players may make a guess in the form of the famous
       phrase which goes something like: "Professor Plum, in the
       library, with the candlestick". If they are correct, they have
-      win. But if they chose poorly, they forfeit any chance to guess
+      won. But if they chose poorly, they forfeit any chance to guess
       again and are effectively eliminated from the game.
     </p>
   </aside>
@@ -163,8 +168,9 @@
     <p>
       Every game has a particular skill required of the players to
       win.  In Poker one has to be able to bluff. Backgammon is a
-      combination of strategy and luck. And Monopoly requires one to
-      be prepared to lose all of one's friends and family.
+      combination of strategy and luck. And Monopoly... well, in
+      Monopoly you have to be prepared to lose all of your friends and
+      family if you want to win.
     </p>
   </aside>
 </section>
@@ -176,7 +182,11 @@
       In the world of Cluedo, the victor is decided principally by the
       one who takes the best notes. This game is all about note
       taking. Players come up with vast and comprehensive note taking
-      sheets in order to gain an edge.
+      sheets in order to gain an edge. I found this particular sheet
+      on an individual's Cluedo fan site, and comes with the catch
+      phrase: "Beat and enrage your family and friends through logical
+      deduction and unashamed nerdiness". I think that sums Cluedo up well, and will do
+      nicely as a conclusion to this section.
     </p>
   </aside>
 </section>
