--- a/MelbDjango/cluedo/slides/0020_title.html
+++ b/MelbDjango/cluedo/slides/0020_title.html
@@ -29,6 +29,7 @@
     in. I'll be asking you to have a guess about what you think the
     cause of our performance issue was, and we'll be giving away a
     prize to the closest guess. That prize is this here copy of
-    Cluedo, provided by CommonCode, so thanks to CommonCode!
+    Cluedo, provided by CommonCode, so thanks to CommonCode, and in particular
+    Bec for doing the legwork!
   </p>
 </aside>
