--- a/MelbDjango/cluedo/slides/0060_performance.html
+++ b/MelbDjango/cluedo/slides/0060_performance.html
@@ -251,13 +251,27 @@
       </div>
     </div>
   </div>
-  <p>Add slide showing an example card.</p>
   <aside class="notes">
     <p>
       So, you need to write down one option from each of the first two
       rows, and then finally write down your specific guess on what
       the cause of the performance cost might be.
     </p>
+    <p>
+      I'll give you a little time to write down your guesses and
+      return them to the front. Also, please don't forget to write
+      your name on the card.
+    </p>
+  </aside>
+</section>
+
+<section>
+  <ol>
+    <li>Django</li>
+    <li>Serializer</li>
+    <li>Reverse URL lookups</li>
+  </ol>
+  <aside class="notes">
     <p>
       As an example, on my card I might write down "Django", to indicate I think
       the problem is something in Django's code, and then "serializer",
@@ -269,6 +283,55 @@
       about 100ms in total to perform URL reverse lookups on each returned Django
       model. The lession there, is be careful where, and how often you use URL reverses.
     </p>
+  </aside>
+</section>
+
+<section>
+  <div class="spacedv">
+    <div>
+      <div class="card">
+        <div>Django</div>
+        <h2>?</h2>
+      </div>
+      <div class="card">
+        <div>DRF</div>
+        <h2>?</h2>
+      </div>
+      <div class="card">
+        <div>JSONAPI</div>
+        <h2>?</h2>
+      </div>
+      <div class="card">
+        <div>Uptick</div>
+        <h2>?</h2>
+      </div>
+    </div>
+    <div>
+      <div class="card">
+        <div>View</div>
+        <h2>?</h2>
+      </div>
+      <div class="card">
+        <div>Model</div>
+        <h2>?</h2>
+      </div>
+      <div class="card">
+        <div>Serialize</div>
+        <h2>?</h2>
+      </div>
+      <div class="card">
+        <div>Render</div>
+        <h2>?</h2>
+      </div>
+    </div>
+    <div>
+      <div class="card">
+        <div></div>
+        <h2>?</h2>
+      </div>
+    </div>
+  </div>
+  <aside class="notes">
     <p>
       I'll give you a little time to write down your guesses and
       return them to the front. Also, please don't forget to write
