--- a/MelbDjango/cluedo/slides/0080_suspect_1.html
+++ b/MelbDjango/cluedo/slides/0080_suspect_1.html
@@ -1,5 +1,5 @@
 <section>
-  <h2>Doing Hard Time</h2>
+  <h2>TODO: Need a title</h2>
   <aside class="notes">
     <p>
       Okay, in this, the final section, I'll be covering each of our
@@ -37,8 +37,11 @@
 </section>
 
 <section>
-  <div class="center" style="width: 80%">
+  <div style="position: relative" class="center" style="width: 80%">
     <img src="./media/wf-deepcopy-flamegraph.svg" />
+    <div style="left: .5em; top: 6em;" class="fg-highlight fragment">
+      <img src="./media/wf-deepcopy-zoom.png" />
+    </div>
   </div>
   <aside class="notes">
     <p>
@@ -99,12 +102,6 @@ class Serializer(BaseSerializer):
       get away with a shallow copy.
     </p>
   </aside>
-</section>
-
-<section>
-  <h2>Solution</h2>
-  <p>
-  </p>
 </section>
 
 <section>
